client/stylesheets/layout.styl
body
  background-color black
  color #eeeeee

.label
  font-size 1.2em

.header
  padding-left 60px
  background-image url(../../images/grits.png)
  background-repeat no-repeat
  background-size 45px 45px
  background-position 0px -10px
  width 350px
  display inline-block
  font-weight bolder
  margin-left 10px
  a
    color #eeeeee

navbar-height = 65px

.controls
  position absolute
  top 0
  right 0
  margin 0px
.nav-btn
  background-color #111
  border-left 1px solid #666
  display inline-block
  padding 5px
  font-weight bold
  width 200px
  height navbar-height - 2
  text-align center
  vertical-align top
  color #eee
  p
    margin-top 5px
    font-size 80%
  i
    font-size 120%

.nav-btn:hover
  background-color #444
  text-decoration none
  color white
  div
    border-color white

